Fixed alignment issues with forms

--- a/cciw/cciwmain/static/css/style.scss
+++ b/cciw/cciwmain/static/css/style.scss
@@ -528,16 +528,17 @@ div.formrow {
 
     @include clearfix();
     clear: both;
-    margin: 0px 0px 4px 0px;
+    margin: 0px 0px 8px 0px;
     padding: 0px 6px 2px 6px;
 
     .field {
+        display: flex;
+        flex-wrap: wrap;
+
         // LHS of form
-        label {
+        > label {
             display: block;
-            float: left;
             width: $labelWidth;
-            margin-bottom: 0.8em;
         }
 
         // RHS of form
@@ -570,13 +571,15 @@ div.formrow {
         font-style: italic;
     }
 
-    textarea, select, input {
+    textarea, select, input:not([type=checkbox]):not([type=radio]) {
         max-width: 100%;
+        min-width: 170px;
     }
 
     .field-help {
         font-size: $fieldHelpScale * 100%;
         color: $textLighterColor;
+        margin-left: 5px;
     }
 }
 
